# CELA-core

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  SECURITY.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  memory.rs  runtime.rs
crates/ref-client/: Cargo.toml
crates/ref-client/src/: main.rs
crates/runtime-llamacpp/: Cargo.toml
crates/runtime-llamacpp/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
scripts/: download_model.sh
