[package]
name = "lie-runtime-llamacpp"
version = "0.1.0"
edition = "2021"

[dependencies]
lie-core = { path = "../core" }
async-trait = "0.1"
# We are using the high-level bindings to llama.cpp
# Note: This requires llama.cpp to be built/available or bundled.
# For this implementation, we assume dynamic linking or standard build scripts.
llama-cpp-2 = "0.1"
tokio = { version = "1.0", features = ["sync"] } 
anyhow = "1.0"
tracing = "0.1"
