[package]
name = "lie-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lie-core = { path = "../core" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
tower-http = { version = "0.5", features = ["trace"] }
